--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="add_content">Returned Content</string>
     <string name="title">BLUBZ</string>
     <string name="view_message">Your Messages:</string>
+    <string name="hello">Hello World, PhotoIntentActivity!</string>
+    <string name="btnIntend">Take (big) Picture</string>
+    <string name="btnIntendS">Take (small) Picture</string>
+    <string name="btnIntendV">Take Video</string>
+    <string name="cannot">Cannot</string>
+    <string name="album_name">CameraSample</string>
 </resources>
